force-app/main/default/objects/Case/fields/Quantity_Handedover__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Handedover__c</fullName>
    <label>Quantity Handedover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>