force-app/main/default/objects/Case/recordTypes/Grievance.recordType-meta.xml
<RecordType>
    <fullName>Grievance</fullName>
    <active>true</active>
    <businessProcess>Complaints and Grievances</businessProcess>
    <description>Record type for review and resolution of a grievance.</description>
    <label>Grievance</label>
</RecordType>