force-app/main/default/objects/Case/recordTypes/PreAuthorization.recordType-meta.xml
<RecordType>
    <fullName>PreAuthorization</fullName>
    <active>true</active>
    <businessProcess>PreAuthorization</businessProcess>
    <label>PreAuthorization</label>
</RecordType>