force-app/main/default/objects/Case/recordTypes/Public_Health_Case.recordType-meta.xml
<RecordType>
    <fullName>Public_Health_Case</fullName>
    <active>true</active>
    <businessProcess>Public Health Support Process</businessProcess>
    <label>Public Health Case</label>
</RecordType>