force-app/main/default/objects/Case/recordTypes/ServiceRequest.recordType-meta.xml
<RecordType>
    <fullName>ServiceRequest</fullName>
    <active>true</active>
    <businessProcess>Care Requests</businessProcess>
    <description>Record type for prior authorization request and approval of a procedure or service.</description>
    <label>Service Request</label>
</RecordType>