force-app/main/default/objects/Case/listViews/Care_Plans.listView-meta.xml
<ListView>
    <fullName>Care_Plans</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.HealthCloudGA__CarePlan</value>
    </filters>
    <label>Care Plans</label>
</ListView>