force-app/main/default/objects/Case/listViews/Complaints_Service_Requests.listView-meta.xml
<ListView>
    <fullName>Complaints_Service_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Complaint,Case.ServiceRequest</value>
    </filters>
    <label>Complaints &amp; Service Requests</label>
</ListView>