force-app/main/default/objects/Case/listViews/Public_Health_Cases.listView-meta.xml
<ListView>
    <fullName>Public_Health_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Public_Health_Case</value>
    </filters>
    <label>Public Health Cases</label>
</ListView>