force-app/main/default/objects/Case/listViews/Sample_Requests.listView-meta.xml
<ListView>
    <fullName>Sample_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Review,In-Review</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Sample Device Request</value>
    </filters>
    <filters>
        <field>CASES.LAST_UPDATE_DATE_ONLY</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Sample Requests</label>
</ListView>