force-app/main/default/objects/Case/listViews/Utilization_Management.listView-meta.xml
<ListView>
    <fullName>Utilization_Management</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.PreAuthorization</value>
    </filters>
    <label>Prior Authorization</label>
</ListView>